# Qv2rayZ

./: CMakeLists.txt
app/macdeployqt-patched/: CMakeLists.txt  main.cpp
app/macdeployqt-patched/shared/: shared.cpp
cmake/: backend.cmake  libuv.cmake
src/ui/qml/: Qv2rayQMLApplication.cpp
src/ui/qml/forms/: MainWindow.qml  MainWindowForm.ui.qml
src/ui/qml/forms/components/: ConnectionItem.qml  ConnectionItemForm.ui.qml
src/ui/qml/forms/widgets/: IconButton.qml  IconButtonForm.ui.qml
